Fixed filters at the end

--- a/unpack_harmonize_fundamentals.ipynb
+++ b/unpack_harmonize_fundamentals.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "unpack_harmonize_fundamentals.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPlaHLV9kWUpezVQQ7852Zo",
+      "mount_file_id": "1s9Sh84KYA1KE_K8s9MurhcBV0ZXeEkzd",
+      "authorship_tag": "ABX9TyMb+g2lzaaiAmduGRM8ldp6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "\r\n",
         "**Expected Outcome**: CSV/Spreadhseet file with original field names, and equivalent.\r\n",
         "\r\n",
-        "**Consideration**: The final mega table with all data from all sources will be filtered with these documents; one per source. If the name does not have an equivalent in this file, it means that it will nor be registered in the database. This way, we will only keep the data from the sources we want.\r\n",
+        "**Consideration**: The final mega table with all data from all sources will be filtered with these documents; one per source. If the name does not have an equivalent in this file, it means that it will not be registered in the database. This way, we will only keep the data from the sources we want.\r\n",
         "\r\n",
         "Google Colab handles Google Spread, otherwise use CSV.\r\n",
         "\r\n",
@@ -68,7 +68,7 @@
         "# settings\r\n",
         "google_colab = False  # using Google Colab tools\r\n",
         "get_data = True  # download fresh data\r\n",
-        "export_df = True  # export the freshly downloaded data.columns\r\n",
+        "export_df = False  # export the freshly downloaded data.columns\r\n",
         "to_csv = True # save it to a csv or if False to Google Sheet\r\n",
         "import_df = True  # import the data.columns modified by user\r\n",
         "import_csv = True  # get it from csv or if False from Google Sheet\r\n",
@@ -145,8 +145,7 @@
         "except:\r\n",
         "  %pip install yahooquery\r\n",
         "  import yahooquery as yq\r\n",
-        "import pandas as pd\r\n",
-        "import sys"
+        "import pandas as pd"
       ],
       "execution_count": null,
       "outputs": []
@@ -195,9 +194,9 @@
         "    %reset -f # to skip prompt\r\n",
         "  raise SystemExit\r\n",
         "\r\n",
-        "show(\"show() works\")\r\n",
-        "for i in range(20):\r\n",
-        "  stop(\"stop() works. Yes, the exception is on purpose\")\r\n",
+        "show(\"show() works\", pd.DataFrame(['show() works']))\r\n",
+        "# for i in range(20):\r\n",
+        "#   stop(\"stop() works. Yes, the exception is on purpose\")\r\n",
         "print(\"stop() doesn't work\")"
       ],
       "execution_count": null,
@@ -258,6 +257,7 @@
         "  return df\r\n",
         "\r\n",
         "yf = download_unpack_yahoo()\r\n",
+        "print(\"Transposed for vewing convenience\")\r\n",
         "yf.T"
       ],
       "execution_count": null,
@@ -352,10 +352,10 @@
         "  yf.drop(erase, axis='columns', inplace=True, errors='ignore')\r\n",
         "except AttributeError as e:\r\n",
         "  stop(f\"Dataframe may be empty. {e}\")\r\n",
-        "df = yf.loc[:,yf.columns.duplicated(keep=False)].T.sort_index()\r\n",
-        "if not df.empty:\r\n",
+        "duplicated_items = yf.loc[:,yf.columns.duplicated(keep=False)].T.sort_index()\r\n",
+        "if not duplicated_items.empty:\r\n",
         "  print(\"Data has duplicate index, deal with this first.\")\r\n",
-        "  stop(df.iloc[:, 0:5])"
+        "  stop(duplicated_items.iloc[:, 0:5])"
       ],
       "execution_count": null,
       "outputs": []
@@ -456,24 +456,40 @@
       },
       "source": [
         "if apply_to_df and import_df:\r\n",
-        "  # prep for dictionary\r\n",
-        "  df1 = df.loc[(df['new'].notnull()) & (df['new'] != '')]\r\n",
-        "  dt = df1.to_dict(orient='records')\r\n",
-        "  dt = {i['current']: i['new'] for i in dt}\r\n",
-        "\r\n",
-        "  # renames the lables using the dictionary\r\n",
-        "  yf.rename(columns=dt, inplace=True)\r\n",
         "\r\n",
         "  # deletes columns not in the dictionary, because were deemed unimportant\r\n",
-        "  drop_me = df.loc[~df['new'].str.strip().astype(bool)]['current'].to_list()\r\n",
-        "  yf.drop(columns=dropped_columns, inplace=True)\r\n",
+        "  drop_me = df.loc[~(df['new'].astype(str).str.strip().astype(bool)) |\r\n",
+        "                   (df['new'].isnull())]\r\n",
+        "  drop_me = drop_me['current'].to_list()\r\n",
+        "  yf.drop(columns=drop_me, errors='ignore', inplace=True)\r\n",
+        "\r\n",
+        "  # renames the labels using the dictionary\r\n",
+        "  rename_me = df.loc[(df['new'].astype(str).str.strip().astype(bool)) &\r\n",
+        "                     ~(df['new'].isnull())]\r\n",
+        "  rename_me = rename_me.to_dict(orient='records')\r\n",
+        "  rename_me = {i['current']: i['new'] for i in rename_me}\r\n",
+        "  yf.rename(columns=rename_me, inplace=True)\r\n",
         "\r\n",
         "  print(\"\\nChanges you made:\\n\"\r\n",
         "        \"-----------------\")\r\n",
-        "  show(dt)\r\n",
-        "  print(\"\\nFind your changes here:\\n\"\r\n",
+        "  show(rename_me)\r\n",
+        "  print(\"\\nColumns dropped:\\n\"\r\n",
+        "        \"-----------------\")\r\n",
+        "  show(drop_me)\r\n",
+        "  print(\"\\nSample output (transposed):\\n\"\r\n",
         "        \"-----------------------\")\r\n",
         "  show(yf.T.iloc[:,1])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nr82yuf0sMc5"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
