Removed 'package' from the last DataFrame

--- a/unpack_harmonize_fundamentals.ipynb
+++ b/unpack_harmonize_fundamentals.ipynb
@@ -4,9 +4,11 @@
   "metadata": {
     "colab": {
       "name": "unpack_harmonize_fundamentals.ipynb",
+      "private_outputs": true,
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1s9Sh84KYA1KE_K8s9MurhcBV0ZXeEkzd",
-      "authorship_tag": "ABX9TyMb+g2lzaaiAmduGRM8ldp6",
+      "authorship_tag": "ABX9TyO6rVuiLeOFIuTB/BDQrmpa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,15 +68,14 @@
       },
       "source": [
         "# settings\r\n",
-        "google_colab = False  # using Google Colab tools\r\n",
+        "google_colab = True  # using Google Colab tools\r\n",
         "get_data = True  # download fresh data\r\n",
         "export_df = False  # export the freshly downloaded data.columns\r\n",
-        "to_csv = True # save it to a csv or if False to Google Sheet\r\n",
+        "to_csv = False # save it to a csv or if False to Google Sheet\r\n",
         "import_df = True  # import the data.columns modified by user\r\n",
-        "import_csv = True  # get it from csv or if False from Google Sheet\r\n",
+        "import_csv = False  # get it from csv or if False from Google Sheet\r\n",
         "apply_to_df = True  # apply new labels to freshly downloaded data\r\n",
-        "#file = \"/content/drive/MyDrive/columns_in_yahoo\"\r\n",
-        "file = \"columns_in_yahoo\""
+        "file = \"columns_in_yahoo\" if to_csv else \"/content/drive/MyDrive/columns_in_yahoo\""
       ],
       "execution_count": null,
       "outputs": []
@@ -195,8 +196,8 @@
         "  raise SystemExit\r\n",
         "\r\n",
         "show(\"show() works\", pd.DataFrame(['show() works']))\r\n",
-        "# for i in range(20):\r\n",
-        "#   stop(\"stop() works. Yes, the exception is on purpose\")\r\n",
+        "for i in range(20):\r\n",
+        "  stop(\"stop() works. Yes, the exception is on purpose\")\r\n",
         "print(\"stop() doesn't work\")"
       ],
       "execution_count": null,
@@ -456,12 +457,12 @@
       },
       "source": [
         "if apply_to_df and import_df:\r\n",
-        "\r\n",
         "  # deletes columns not in the dictionary, because were deemed unimportant\r\n",
         "  drop_me = df.loc[~(df['new'].astype(str).str.strip().astype(bool)) |\r\n",
         "                   (df['new'].isnull())]\r\n",
         "  drop_me = drop_me['current'].to_list()\r\n",
         "  yf.drop(columns=drop_me, errors='ignore', inplace=True)\r\n",
+        "  yf.drop(index=['package'], errors='ignore', inplace=True)  # DEBUGGING\r\n",
         "\r\n",
         "  # renames the labels using the dictionary\r\n",
         "  rename_me = df.loc[(df['new'].astype(str).str.strip().astype(bool)) &\r\n",
@@ -470,15 +471,10 @@
         "  rename_me = {i['current']: i['new'] for i in rename_me}\r\n",
         "  yf.rename(columns=rename_me, inplace=True)\r\n",
         "\r\n",
-        "  print(\"\\nChanges you made:\\n\"\r\n",
-        "        \"-----------------\")\r\n",
-        "  show(rename_me)\r\n",
-        "  print(\"\\nColumns dropped:\\n\"\r\n",
-        "        \"-----------------\")\r\n",
-        "  show(drop_me)\r\n",
-        "  print(\"\\nSample output (transposed):\\n\"\r\n",
-        "        \"-----------------------\")\r\n",
-        "  show(yf.T.iloc[:,1])"
+        "  print(f\"\\nChanges you made: {rename_me}\")\r\n",
+        "  print(f\"\\nColumns dropped: {(', '.join(map(repr, drop_me)))}\")\r\n",
+        "  print(\"\\nSample output (transposed):\\n\")\r\n",
+        "  show(pd.DataFrame(yf.T.iloc[:,0]))"
       ],
       "execution_count": null,
       "outputs": []
